0.4.17/_sources/gallery/add_multiscale_image.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/add_multiscale_image.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_add_multiscale_image.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_add_multiscale_image.py:


Add multiscale image
====================

Displays a multiscale image

.. tags:: visualization-advanced

.. GENERATED FROM PYTHON SOURCE LINES 9-28



.. image-sg:: /gallery/images/sphx_glr_add_multiscale_image_001.png
   :alt: add multiscale image
   :srcset: /gallery/images/sphx_glr_add_multiscale_image_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /home/runner/work/napari/napari/examples/add_multiscale_image.py:19: FutureWarning: `multichannel` is a deprecated argument name for `pyramid_gaussian`. It will be removed in version 1.0. Please use `channel_axis` instead.
      pyramid_gaussian(base, downscale=2, max_layer=4, multichannel=True)
    multiscale level shapes:  [(4096, 4096), (2048, 2048), (1024, 1024), (512, 512), (256, 256)]






|

.. code-block:: default


    from skimage import data
    from skimage.transform import pyramid_gaussian
    import napari
    import numpy as np


    # create multiscale from astronaut image
    base = np.tile(data.astronaut(), (8, 8, 1))
    multiscale = list(
        pyramid_gaussian(base, downscale=2, max_layer=4, multichannel=True)
    )
    print('multiscale level shapes: ', [p.shape[:2] for p in multiscale])

    # add image multiscale
    viewer = napari.view_image(multiscale, multiscale=True)

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_add_multiscale_image.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example


    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: add_multiscale_image.py <add_multiscale_image.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: add_multiscale_image.ipynb <add_multiscale_image.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
